upd text and fix style

--- a/src/components/InfoCell/ui/style.css
+++ b/src/components/InfoCell/ui/style.css
@@ -5,6 +5,8 @@
     padding: 7px;
     border-radius: var(--main-border-radius);
     align-items: center;
+    width: 100%;
+    justify-content: space-between;
 }
 
 .reversed {
