--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
-.App {
+.main-content {
+  position: relative;
+  top: var(--main-header-height);
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 70%;
-  margin: 0 auto;
+  margin: 10px auto 0 auto;
 }
 
 .nunito-400 {
@@ -19,4 +21,22 @@
   font-optical-sizing: auto;
   font-weight: 800;
   font-style: normal;
+}
+
+.page-title-text {
+  font-size: 30px;
+  color: var(--main-text-color);
+  text-transform: uppercase;
+  height: 100px;
+  width: 100%;
+  border-radius: var(--main-border-radius);
+  margin: 0;
+  white-space: normal;
+  cursor: auto;
+  -webkit-user-select: none;
+  user-select: none;
+  background-color: var(--main-header-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
