--- a/src/components/NavHeader/ui/style.css
+++ b/src/components/NavHeader/ui/style.css
@@ -1,8 +1,9 @@
 .header-container {
     position: fixed;
     top: 0;
-    left: 20%;
-    width: 60%;
+    left: 0;
+    width: 100%;
+    min-width: 600px;
     height: var(--main-header-height);
     background-color: var(--main-header-color);
     display: flex;
@@ -23,4 +24,36 @@
     border-radius: 4px;
     text-decoration: none;
     color: var(--main-link-color);
+}
+
+@media all and (max-width: 650px) {
+    .header-container {
+        min-width: initial;
+    }
+}
+
+
+@media all and (max-width: 500px) {
+    .header-container {
+        display: grid;
+        grid-template-columns: 30% 30%;
+    }
+
+    .header-link {
+        text-align: center;
+    }
+}
+
+@media all and (max-width: 375px) {
+    .header-container {
+        grid-template-columns: auto;
+    }
+
+    .header-link {
+        margin-bottom: 15px;
+    }
+
+    .link-with-img {
+        margin-bottom: initial;
+    }
 }
