--- a/src/components/TextContainer/ui/style.css
+++ b/src/components/TextContainer/ui/style.css
@@ -2,3 +2,17 @@
     margin: 20px;
     color: var(--main-text-color);
 }
+
+
+@media all and (min-width: 1400px) {
+    .text-container {
+        font-size: larger;
+    }
+}
+
+
+@media all and (min-width: 2000px) {
+    .text-container {
+        font-size: xx-large;
+    }
+}
