--- a/src/pages/HomePage/ui/style.css
+++ b/src/pages/HomePage/ui/style.css
@@ -1,3 +1,7 @@
+h2 {
+    margin: 15px auto;
+}
+
 .about-author-text {
     font-size: 30px;
     color: var(--main-text-color);
@@ -7,6 +11,10 @@
     margin: 20px auto 0 auto;
     padding: 7px;
     outline: 1px solid var(--main-border-color);
+}
+
+.about-author-text__subtext {
+    font-size: 0.8rem;
 }
 
 @media all and (max-width: 1280px) {
