--- a/src/components/InfoCell/ui/style.css
+++ b/src/components/InfoCell/ui/style.css
@@ -20,6 +20,17 @@
     border-radius: var(--main-border-radius);
 }
 
+a.linkInText {
+    color: #d5d0f3;
+    text-decoration: none;
+    text-shadow: 1px 1px 6px #d5d0f3;
+    transition: all .2s ease-in-out;
+}
+
+a.linkInText:hover {
+    color: #403b59;
+}
+
 @media all and (max-width: 650px) {
     .info-cell {
         flex-direction: column;
