--- a/src/pages/HomePage/ui/style.css
+++ b/src/pages/HomePage/ui/style.css
@@ -17,6 +17,14 @@ h2 {
     font-size: 0.8rem;
 }
 
+.qr-container {
+    width: 290px;
+    aspect-ratio: 1;
+    margin: 30px;
+    border-radius: var(--main-border-radius);
+    box-shadow: 0 0px 11px 10px var(--main-border-color);
+}
+
 @media all and (max-width: 1280px) {
     .about-author-text {
         max-width: initial;
